--- a/archishma/my depmap.ipynb
+++ b/archishma/my depmap.ipynb
@@ -7,14 +7,53 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "dep_score = pd.read_csv('D2_DRIVE_gene_dep_scores.csv')\n",
+    "dep_score = pd.read_csv('D2_DRIVE_gene_dep_scores.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0           CDH2\n",
+       "1           AKT3\n",
+       "2       POU5F1P5\n",
+       "3           MED6\n",
+       "4          NR2E3\n",
+       "          ...   \n",
+       "7970      PPP4R1\n",
+       "7971        CDH1\n",
+       "7972       PTBP3\n",
+       "7973       KCNE2\n",
+       "7974    CASP8AP2\n",
+       "Name: 0, Length: 7975, dtype: object"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dep_score['Unnamed: 0'].str.split(' ', expand = True)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# first we need to split the names out!\n",
     "dep_score['Symbol'] = dep_score['Unnamed: 0'].str.split(' ', expand = True)[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +320,7 @@
        "[5 rows x 397 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +406,7 @@
        "NR2E3       -0.200507"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +426,7 @@
        "<AxesSubplot:ylabel='Frequency'>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -410,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +548,7 @@
        "[139 rows x 1 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +583,7 @@
        "      dtype='object', name='Symbol', length=139)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,78 +594,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "U2AF1L5&U2AF1\n",
+      "GPR89B&GPR89A\n"
+     ]
+    }
+   ],
    "source": [
-    "rbp = pd.read_excel('mmc2.xlsx', sheet_name = 'CandidateRBDpep')\n",
-    "rbp_targets = [t for t in targets if t in rbp['Symbol'].dropna().tolist()]"
+    "# there's that & that compose of two genes\n",
+    "clean_targets = []\n",
+    "for t in targets:\n",
+    "    if '&' in t:\n",
+    "        clean_targets.extend(t.split('&'))\n",
+    "        print(t)\n",
+    "    else:\n",
+    "        clean_targets.append(t)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['ALYREF',\n",
-       " 'SF3B4',\n",
-       " 'SF3A1',\n",
-       " 'NXF1',\n",
-       " 'CCT7',\n",
-       " 'CCT2',\n",
-       " 'TBL3',\n",
-       " 'WDR3',\n",
-       " 'RPL35',\n",
-       " 'U2AF2',\n",
-       " 'CTNNB1',\n",
-       " 'DHX8',\n",
-       " 'DHX15',\n",
-       " 'DYNC1I2',\n",
-       " 'EEF2',\n",
-       " 'PUF60',\n",
-       " 'SNRNP200',\n",
-       " 'SF3B1',\n",
-       " 'XRCC6',\n",
-       " 'GEMIN5',\n",
-       " 'HNRNPC',\n",
-       " 'HNRNPU',\n",
-       " 'HSPE1',\n",
-       " 'NACA',\n",
-       " 'PABPC3',\n",
-       " 'POLR2A',\n",
-       " 'RBM22',\n",
-       " 'PSMC2',\n",
-       " 'RAN',\n",
-       " 'ABCE1',\n",
-       " 'RPA1',\n",
-       " 'RPL7',\n",
-       " 'RPS27A',\n",
-       " 'SNRPF',\n",
-       " 'CCT3',\n",
-       " 'CDK11A',\n",
-       " 'VCP',\n",
-       " 'XRCC5',\n",
-       " 'WDR75',\n",
-       " 'UTP15',\n",
-       " 'RUVBL1',\n",
-       " 'EIF3A',\n",
-       " 'EIF3G',\n",
-       " 'EIF3H',\n",
-       " 'EIF3I',\n",
-       " 'RPL14',\n",
-       " 'PRPF3']"
+       "141"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rbp_targets"
+    "len(clean_targets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "139"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(targets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rbp = pd.read_excel('mmc2.xlsx', sheet_name = 'CandidateRBDpep')\n",
+    "rbp_targets = [t for t in clean_targets if t in rbp['Symbol'].dropna().tolist()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "47"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(rbp_targets)"
    ]
   },
   {
@@ -640,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +727,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dep_score.loc[rbp_targets].median(axis = 1).sort_values()"
+   ]
   }
  ],
  "metadata": {
