--- a/archishma/sf3a1.ipynb
+++ b/archishma/sf3a1.ipynb
@@ -1248,6 +1248,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# bam:\n",
+    "#1. read, where the read maps (chr1, 100, 120, '-')\n",
+    "#2. -> compare to genome coordinates (chr1, 110, '-') -> start of exon"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
